logs/Slang/chapter-8/8.26.6.2--parameter_type_conflict.sv.log
name: parameter_type_conflict
description: superclass type declaration conflicts must be resolved in subclass
should_fail: 0
tags: 8.26.6.2
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.26.6.2--parameter_type_conflict.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.26.6.2--parameter_type_conflict.sv:8:2: error: language feature not yet supported
	interface class ic1#(type T = logic);
	^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.26.6.2--parameter_type_conflict.sv:12:2: error: language feature not yet supported
	interface class ic2#(type T = logic);
	^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.26.6.2--parameter_type_conflict.sv:16:2: error: language feature not yet supported
	interface class ic3#(type TYPE = logic) extends ic1#(TYPE), ic2#(TYPE);
	^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
